# ai-assistant

./: .env.example  .gitignore  Makefile  REFACTORING_PLAN.md  RULES.md  Readme.md  answers.md  design.md  docker-compose.yml  master_state.json  plan.md  pyproject.toml
app/: assistant.py  config.py  schemas.py  smoke_test.py
app/api/: main.py
app/bot/: main.py
app/db/: init_db.py  models.py  session.py
app/generation/: grounding.py  prompt.py  service.py
app/ingest/: chunker.py  parsers.py  service.py
app/llm/: client.py  tokens.py
app/retrieval/: service.py
app/sync/: reindex.py  scanner.py
data/: qa_corpus.json  sample_reglament.txt
scripts/: diagnose.py  eval_pipeline.py  profile_ram.py
tests/: test_anti_hallucination.py  test_chunker.py  test_formatter.py  test_generation.py  test_grounding.py  test_hybrid_score.py  test_link_graph.py  test_md_parser.py  test_scanner.py
